# Alchemy2D

./: .clang-format  .clang-tidy  BuildOptions.cmake  CMAKE_LICENSE  CMakeLists.txt  LICENSE  LICENSE.md  README.md
CMake/: BuildDependencies.cmake  BuildGLEW.cmake  BuildGLFW.cmake  Buildfmt.cmake
Examples/: CMakeLists.txt
Examples/Monitor/: CMakeLists.txt  main.cpp
Examples/Playground/: CMakeLists.txt  Playground.cc
Source/: CMakeLists.txt
Source/CMake/: SourcesAndHeaders.cmake
Source/Core/: Application.cc
Source/Core/Math/: Vector2.cc
Source/Graphics/: Monitor.cpp  Renderer.cc  Window.cc  Window.cc.disabled  Window.cpp  WindowManager.cc
Source/Include/Alchemy2D/Core/: Application.hh  Exception.hpp  Exceptions.hpp
Source/Include/Alchemy2D/Graphics/: Monitor.hpp  Window.hh  Window.hh.disabled  Window.hpp  WindowEvent.hh  WindowFlag.hh  WindowFlag.hpp  WindowManager.hh
Source/Include/Alchemy2D/Utility/: Math.hh
Source/Include/Alchemy2D/Utility/Math/: Vector2.hh
Source/Utility/Math/: Vector2.cc
